ingress/ingress-lunarflow.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  namespace: lunarflow
spec:
  ingressClassName: traefik
  rules:
  - host: rabbitmq.luxdomain.work
    http:
      paths:
      - backend:
          service:
            name: rabbitmq
            port:
              number: 15672
        path: /
        pathType: Prefix
